--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@tailwindcss/cli": "^4.1.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.545.0",
     "motion": "^12.0.0-alpha.1",
     "next": "16.0.7",
+    "next-themes": "^0.4.6",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^2.5.5"
   },
   "overrides": {
