--- a/package.json
+++ b/package.json
@@ -47,5 +47,11 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "18.3.3",
+      "@types/react-dom": "18.3.0"
+    }
   }
 }
